apps/zwave/zwave2/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zwave2-ingress
  labels:
    revision: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zwave2.samsonnguyen.ca`)
      kind: Rule
      services:
        - name: zwave2
          port: 8091
          namespace: zwave
      middlewares:
        - name: traefik-sso@kubernetescrd
        - name: traefik-redirect-scheme@kubernetescrd
        - name: traefik-basic-auth@kubernetescrd
          namespace: traefik
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
